<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/pref_high_quality_key"
        android:title="@string/pref_high_quality_title"
        android:summary="@string/pref_high_quality_desc"/>
    <Preference
        android:key="@string/pref_about_key"
        android:title="@string/pref_about_title"
        android:summary="@string/pref_about_desc"/>
    <Preference
        android:key="@string/pref_restore_deleted_key"
        android:summary="@string/pref_restore_deleted_title"
        android:title="@string/pref_restore_deleted_desc" />
    <Preference
        android:key="@string/pref_empty_trash_key"
        android:summary="@string/pref_empty_trash_title"
        android:title="@string/pref_empty_trash_desc" />

    <ListPreference
        android:defaultValue="@string/pf_dark_auto"
        android:dialogTitle="@string/pf_dark_dialog"
        android:entries="@array/light_theme"
        android:entryValues="@array/light_theme_value"
        android:title="Set App theme"
        android:summary="Set the theme to Dark Mode"
        android:key="pref_dark_mode"
        />
</PreferenceScreen>